testdata/simple-k8s/nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: demo
spec:
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app
        image: nginx
        env:
        - name: FROM_SECRET
          valueFrom:
            secretKeyRef:
              name: my-secret
              key: password
        - name: FROM_CONFIG
          valueFrom:
            configMapKeyRef:
              name: my-config
              key: key
      volumes:
      - name: config-vol
        configMap:
          name: my-config
      - name: secret-vol
        secret:
          secretName: my-secret
